--- a/index.html
+++ b/index.html
@@ -87,11 +87,8 @@
 
 <body>
     <div>
-    <picture>
-     <!-- <source media="(max-width:600px)" srcset="img/slice-lemon-cake-smaller.jpeg.jpg"> -->
-    <!-- <source media="(max-width: 1500px)" srcset="img/lemon-layer-cake-banner"> -->
-    <!-- <source srcset="img/lemon-layer-cake-banner">  -->
-    <img src="img/lemon-layer-cake-banner.jpg" alt="Lemon Layer Cake" style="width:auto;">
+  <picture>
+    <img src="lemon-layer-cake-banner.jpg" alt="Lemon Layer Cake" style="width:auto;">
   </picture>  
 </div>
 
