--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <body>
     <div>
   <picture>
-    <img src="lemon-layer-cake-banner.jpg" alt="Lemon Layer Cake" style="width:auto;">
+    <img src="img/lemon-layer-cake-banner.jpg" alt="Lemon Layer Cake" style="width:auto;">
   </picture>  
 </div>
 
